<resources>
    <string name="app_name">Flag Carrier</string>
    <string name="settings_menu_entry">Settings</string>
    <string name="target_url_setting_name">Target URL</string>
    <string name="device_id_setting_name">Device ID</string>
    <string name="group_id_setting_name">Group ID</string>
    <string name="pub_key_setting_name">Public Key</string>
    <string name="priv_key_setting_name">Private Key</string>
    <string name="priv_key_gen_btn">Generate Keypair</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pos_avail_setting_name">Available Positions</string>
    <string name="initial_greeting">Scan Tag!</string>
    <string name="write_tag">Write Tag</string>
    <string name="write_tag_title">Write Tag</string>
    <string name="manual_login_submit">Login</string>
    <string name="manual_login_title">Manual Login</string>
    <string name="login_title">Login</string>
    <string name="clear_button">Clear</string>
    <string name="manual_button">Manual Login</string>
    <string name="clear_conf_title">Clear?</string>
    <string name="clear_confirmation">This will clear the currently logged in users. Are you sure?</string>
    <string name="wt_disp_name">Display Name</string>
    <string name="wt_country">Country</string>
    <string name="wt_speedruncom">speedrun.com Name</string>
    <string name="wt_twitch">Twitch Name</string>
    <string name="wt_twitter">Twitter Handle</string>
    <string name="wt_extra_data">Extra data (lines of key=value)</string>
    <string name="wt_write_tag_button">Write Tag</string>
    <string name="fill_set_write">Settings Template</string>
    <string name="hceservicedesc">FlagCarrier HCE Service</string>
    <string name="hceaiddescription">FlagCarrier HCE AID</string>
</resources>
