<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="unset"
        android:inputType="textUri"
        android:key="target_url"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/target_url_setting_name" />
    <EditTextPreference
        android:defaultValue="left,mid,right"
        android:key="pos_avail"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pos_avail_setting_name" />
    <EditTextPreference
        android:defaultValue="some_android_device"
        android:inputType="text"
        android:key="device_id"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/device_id_setting_name" />
    <EditTextPreference
        android:defaultValue="main"
        android:inputType="text"
        android:key="group_id"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/group_id_setting_name" />
    <EditTextPreference
        android:inputType="text"
        android:key="pub_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pub_key_setting_name" />
    <!-- <EditTextPreference
        android:inputType="text"
        android:key="priv_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/priv_key_setting_name" />
    <Preference
        android:key="gen_skpk"
        android:title="@string/priv_key_gen_btn" /> -->
</PreferenceScreen>