<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteTagActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/wt_disp_name" />

        <EditText
            android:id="@+id/displayNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/wt_disp_name"
            android:inputType="textPersonName"
            android:maxLength="254" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/wt_country" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            app:ccp_countryPreference="de,fr,se,nl,us,gb"
            app:ccp_defaultNameCode="DE"
            app:ccp_showFullName="true"
            app:ccp_showNameCode="true"
            app:ccp_showPhoneCode="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/wt_speedruncom" />

        <EditText
            android:id="@+id/speedrunNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/wt_speedruncom"
            android:inputType="textPersonName"
            android:maxLength="254" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/wt_twitch" />

        <EditText
            android:id="@+id/twitchNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/wt_twitch"
            android:inputType="textPersonName"
            android:maxLength="254" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/wt_twitter" />

        <EditText
            android:id="@+id/twitterHandleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/wt_twitter"
            android:inputType="textPersonName"
            android:maxLength="254" />

        <TextView
            android:id="@+id/extraDataLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/wt_extra_data" />

        <EditText
            android:id="@+id/extraDataText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/wt_extra_data"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/writeTagButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/wt_write_tag_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>